--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>My Profile</title>
 </head>
+
 <body>
+  <header>
+    <nav class="headNav">
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Experience</a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Contacts</a></li>
+      </ul>
+    </nav>
+ </header>
+<section>
+
+  About section
+  Experience Section
+  Skills section
+  Project section (to be added to as we add projects!)
+  Contact section (edited)
+
+</section>
+
 
   <h1>Hello World!</h1>
-  
+
 </body>
+
 </html>
