--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
     <div class="aboutDiv">
 
       <div class="aboutCol1">
-        <h1>About</h1>
+        <h1 class="sectionTitle">About</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam sed, repellendus expedita aut aliquid ipsa, aperiam explicabo hic voluptates eius dignissimos officia quos ducimus fugiat architecto animi harum quaerat minus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur doloremque reiciendis cum corporis reprehenderit iusto non tempora numquam unde? Nostrum laborum cum id molestias doloremque accusantium dolorem ea dicta reprehenderit.</p>
       </div>
       <div class="aboutCol2">
         Some picture?
@@ -81,14 +83,25 @@
     </div>
   </section>
 
-  <section>
-    <div class="contactDiv">
-      Contact
-    </div>
-  </section>
+  
+    
 
   <footer>
+    <div class="contactDiv">
+      <div class="contact">
+        <a href="http://www.github.com"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Logo.png" alt=""></a>
+      </div>
 
+      <div class="contact">
+        <p>website</p>
+      </div>
+
+      <div class="contact">
+        <a href="http://www.linkedin.co.uk"><img src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Logo.svg.original.svg" alt="">
+      </div>
+
+    </div>
+  
   </footer>
 
 </body>
