--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <nav class='navbar'>
     <p>About</p>
-    <p>Experience</p>
+    <!-- <p>Experience</p> -->
     <p>Skills</p>
     <p>Project</p>
     <p>Contact</p>
@@ -66,38 +66,32 @@
               <div class='logoDiv straightRBorder' id='ga'>
                 <div class="arrowLBorder" id='ga'></div>
                 <figure class="logoContainer">
-                  <img src="assets/general-assembly-logo-png-9.png" alt="GA Logo" class="logoImage" id='ga'>
+                  <img src="assets/GA-logo-vector.png" alt="GA Logo" class="logoImage" id='ga'>
                 </figure>
               </div>
               <div class='logoDiv straightRBorder' id='innocent'>
                 <div class="arrowLBorder hidden" id=innocent></div>
                 <figure class="logoContainer">
-                  <img src="assets/250mlSB.png" alt="Innocnet Drinks Logo" class="logoImage" id='innocent'>
+                  <img src="assets/innocent-logo-vector.png" alt="Innocnet Drinks Logo" class="logoImage" id='innocent'>
                 </figure>
               </div>
               <div class='logoDiv straightRBorder' id='newcastle'>
                 <div class="arrowLBorder hidden" id='newcastle'></div>
                 <figure class="logoContainer">
-                  <img src="assets/newcastle-uk-logo-800x800.jpg" alt="Newcastle university Logo" class="logoImage"
+                  <img src="assets/newcastle-uk-logo-vector.png" alt="Newcastle university Logo" class="logoImage"
                     id='newcastle'>
                 </figure>
               </div>
             </div>
             <div class="jobDescriptionDiv">
               <article class="about ga" id='ga'>
-                <p> GA Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit sequi enim consequuntur dolores
-                  velit, hic reiciendis tenetur molestias accusantium ratione cumque eos reprehenderit iste error
-                  numquam suscipit quas aliquam amet.</p>
+                <p> GA Lorem.</p>
               </article>
               <article class="about innocent hidden" id='innocent'>
-                <p>INNOCENT Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit sequi enim consequuntur dolores
-                  velit, hic reiciendis tenetur molestias accusantium ratione cumque eos reprehenderit iste error
-                  numquam suscipit quas aliquam amet.</p>
+                <p>INNOCENT Lorem.</p>
               </article>
               <article class="about newcastle hidden" id='newcastle'>
-                <p>NEWCASTLE UNI Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit sequi enim consequuntur
-                  dolores velit, hic reiciendis tenetur molestias accusantium ratione cumque eos reprehenderit iste
-                  error numquam suscipit quas aliquam amet.</p>
+                <p>NEWCASTLE UNI Lorem.</p>
               </article>
 
             </div>
@@ -168,7 +162,6 @@
               <i class="devicon-webpack-plain sIcon"></i>
               <p class='description'>Webpack</p>
             </div>
-           
             <div class="icon">
               <i class="devicon-mongodb-plain sIcon"></i>
               <p class='description'>MongoDB</p>
@@ -222,7 +215,7 @@
       <h1 class='title has-text-centered'>Projects</h1>
       <div class="pageControl">
        
-        <div class="level is-mobile is-centered">
+        <div class="level is-centered">
           <div class="level-item pageNum">
             <a id='minus' class=projectPageNum>-</a>
           </div>
@@ -239,12 +232,6 @@
             <a id='4' class=projectPageNum>4</a>
           </div>
           <div class="level-item pageNum">
-            <a id='5' class=projectPageNum>5</a>
-          </div>
-          <div class="level-item pageNum">
-            <a id='6' class=projectPageNum>6</a>
-          </div>
-          <div class="level-item pageNum">
             <a id='plus' class=projectPageNum>+</a>
           </div>
         </div>
@@ -257,36 +244,46 @@
           <div class="tile">
             <div class="tile is-parent is-6">
               <div class="tile is-child box">
-                <img src="assets/HSP1.png" alt="">
+                <div class="projectLogo">
+                <img src="assets/House-share-logo.png" alt="">
+              </div>
               </div>
             </div>
             <div class="tile is-parent is-6">
               <div class="tile is-child box">
-                <img src="assets/HSP1.png" alt="">
+                <div class="projectInfo">
+                  <h2>=> House-Share</h2>
+                  <p>LINKS TO PROJECT</p>
+                  <p class="heading has-text-centered">Task</p>
+                  <p>Create a full stack application in one week.</p>
+                  <p>Working alone, I chose to build a Django app with a React front end and a PostgreSQL database. In the app users are able to create house groups, which existing or new housemates are then able to request access to. Once in the group expenses can then be entered along with additional information and images, and can mark expenses as paid, with this information available to all group members</p>
+                  <p class="heading has-text-centered">Technologies</p>
+                  <p>DJANGO | REACT.JS | POSTGRESQL | HTML | SCSS | BULMA | HEROKU | JWT  </p>
+                </div>
               </div>
             </div>
           </div>
           <div class="tile is-parent">
             <div class="tile is-child box">
-              <img src="assets/HS1.png" alt="">
+              <img src="assets/House-Share_expense_detail_2.png" alt="">
             </div>
           </div>
         </div>
         <div class="tile is-vertical">
           <div class="tile is-parent">
             <div class="tile is-child box">
-              <img src="assets/HS1.png" alt="">
+              <img src="assets/House-Share-home.png" alt="">
             </div>
           </div>
           <div class="tile">
             <div class="tile is-parent is-6">
               <div class="tile is-child box">
-                <img src="assets/HSP1.png" alt="">
+                <img src="assets/house-share-mobile-expense_split.png" alt="">
               </div>
             </div>
             <div class="tile is-parent is-6">
               <div class="tile is-child box">
-                <img src="assets/HSP1.png" alt="">
+                <img src="assets/house-share-mobile-home.png" alt="">
               </div>
             </div>
           </div>
@@ -299,36 +296,44 @@
           <div class="tile">
             <div class="tile is-parent is-6">
               <div class="tile is-child box">
-                <img src="assets/HSP1.png" alt="">
+                <img src="#" alt="">
               </div>
             </div>
             <div class="tile is-parent is-6">
               <div class="tile is-child box">
-                <img src="assets/HSP1.png" alt="">
+                <div class="projectInfo">
+                  <h2>=> Booked-Up!</h2>
+                  <p>LINKS TO PROJECT</p>
+                  <p class="heading has-text-centered">Task</p>
+                  <p>Create a full stack application in one week</p>
+                  <p>Working in a group of three we created a React app which allowed users to find, store and comment on differant books. The app uses a MongoDB database and an Express.js back end. The app also allows users to create and host private chat rooms</p>
+                  <p class="heading has-text-centered">Technologies</p>
+                  <p>REACT.JS | EXPRESS.JS| MONGODB & MONGOOSE | HTML | SCSS | BULMA | HEROKU | JWT | NY TIMES API | GOOGLE BOOKS API </p> 
+                </div>
               </div>
             </div>
           </div>
           <div class="tile is-parent">
             <div class="tile is-child box">
-              <img src="assets/HS1.png" alt="">
+              <img src="assets/booked-up-allBookClubs.png" alt="">
             </div>
           </div>
         </div>
         <div class="tile is-vertical">
           <div class="tile is-parent">
             <div class="tile is-child box">
-              <img src="assets/HS1.png" alt="">
+              <img src="assets/booked-up-bookclub.png" alt="">
             </div>
           </div>
           <div class="tile">
             <div class="tile is-parent is-6">
               <div class="tile is-child box">
-                <img src="assets/HSP1.png" alt="">
+                <img src="assets/Booked-Up - pLogin.png" alt="">
               </div>
             </div>
             <div class="tile is-parent is-6">
               <div class="tile is-child box">
-                <img src="assets/HSP1.png" alt="">
+                <img src="assets/Booked-up-home-p.png" alt="">
               </div>
             </div>
           </div>
@@ -341,36 +346,44 @@
           <div class="tile">
             <div class="tile is-parent is-6">
               <div class="tile is-child box">
-                <img src="assets/HSP1.png" alt="">
+                <img src="#" alt="">
               </div>
             </div>
             <div class="tile is-parent is-6">
               <div class="tile is-child box">
-                <img src="assets/HSP1.png" alt="">
+                <div class="projectInfo">
+                  <h2>=> Tube Time</h2>
+                  <p>LINKS TO PROJECT</p>
+                  <p class="heading has-text-centered">Task</p>
+                  <p>In two days create a React app utilising a public API</p>
+                  <p>Working in a pair we created a fron end React app that used the TFL API to provide users with station information and arrival times for every train and station on the TFL network</p>
+                  <p class="heading has-text-centered">Technologies</p>
+                  <p>REACT.JS | TFL API |  HTML | CSS | BULMA | WEBPACK | GIT & GITHUB </p> 
+                </div>
               </div>
             </div>
           </div>
           <div class="tile is-parent">
             <div class="tile is-child box">
-              <img src="assets/HS1.png" alt="">
+              <img src="assets/tubemap - station list.png" alt="">
             </div>
           </div>
         </div>
         <div class="tile is-vertical">
           <div class="tile is-parent">
             <div class="tile is-child box">
-              <img src="assets/HS1.png" alt="">
+              <img src="assets/tubemap - arrivals.png" alt="">
             </div>
           </div>
           <div class="tile">
             <div class="tile is-parent is-6">
               <div class="tile is-child box">
-                <img src="assets/HSP1.png" alt="">
+                <img src="assets/tubemap - mobile home.png" alt="">
               </div>
             </div>
             <div class="tile is-parent is-6">
               <div class="tile is-child box">
-                <img src="assets/HSP1.png" alt="">
+                <img src="assets/tubemap - mobile arrivals.png" alt="">
               </div>
             </div>
           </div>
@@ -383,12 +396,20 @@
           <div class="tile">
             <div class="tile is-parent is-6">
               <div class="tile is-child box">
-                <img src="assets/HSP1.png" alt="">
+                <img src="#" alt="">
               </div>
             </div>
             <div class="tile is-parent is-6">
               <div class="tile is-child box">
-                <img src="assets/HSP1.png" alt="">
+                <div class="projectInfo">
+                  <h2>=> PAC-DUDE</h2>
+                  <p>LINKS TO PROJECT</p>
+                  <p class="heading has-text-centered">Task</p>
+                  <p>To make a game to run in the browser using 'vanilla' JS, HTML & CSS</p>
+                  <p>For this project i choose to make a themed version of the classic PacMan game. The game has 5 levels which progressivly increase in difficulty, using a Bredth First Search algorithm to controll the 'ghosts'. The game includes additional superfoods including allowing the user to collect and shoot missliles</p>
+                  <p class="heading has-text-centered">Technologies</p>
+                  <p>JAVASCRIPT | HTML | CSS | GIT & GITHUB </p> 
+                </div>
               </div>
             </div>
           </div>
@@ -405,18 +426,12 @@
             </div>
           </div>
           <div class="tile">
-            <div class="tile is-parent is-6">
+            <div class="tile is-parent">
               <div class="tile is-child box">
-                <img src="assets/HSP1.png" alt="">
-              </div>
-            </div>
-            <div class="tile is-parent is-6">
-              <div class="tile is-child box">
-                <img src="assets/HSP1.png" alt="">
+                <img src="#" alt="">
               </div>
             </div>
           </div>
-
         </div>
       </div>
 
