--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
   <link rel="stylesheet"
     href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Andika&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Andika&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
   <script src="app.js"></script>
   <title>Peter Gilbert - Portfolio</title>
@@ -20,12 +20,12 @@
   </header>
 
   <nav class='navbar'>
-  
+
     <a href="#aboutPage">About</a>
     <a href="#contactPage">Contact</a>
     <a href="#skillsPage">Skills</a>
     <a href="#projectsPage">Projects</a>
-    
+
   </nav>
 
   <section>
@@ -57,7 +57,10 @@
 
           <p>A highly-motivated person with a strong belief that improvement is always possible. </p>
           <br>
-            <p>My background is in global supply chains and analytics, and I have always had a passion for coding. This year I decided to follow this passion and enroled in the Software Engineering Immersive course with General Assembley to imporve my skills. I am now looking for an oportunity to put these skills to good use working as a Full-Stack Developer.  </p> 
+          <p>My background is in global supply chains and analytics, and I have always had a passion for coding. This
+            year I decided to follow this passion and enroled in the Software Engineering Immersive course with General
+            Assembley to imporve my skills. I am now looking for an oportunity to put these skills to good use working
+            as a Full-Stack Developer. </p>
           <br>
 
           <p>Below you can see my current skills and sample of my projects.
@@ -101,7 +104,6 @@
                 <p>Human Geography (BA)</p>
                 <p>2009 - 2011</p>
               </article>
-
             </div>
           </div>
         </div>
@@ -124,7 +126,8 @@
             </a>
             <a class='contactIcon' href='https://github.com/PeteG-cmd'>
               <i class="fab fa-github fa-5x"></i>
-              <p class='contactText'>github.com/PeteG-cmd</p></a>
+              <p class='contactText'>github.com/PeteG-cmd</p>
+            </a>
           </div>
         </div>
         <div class="column is-7-desktop">
@@ -209,7 +212,6 @@
             <div class="icon">
               <i class="fab fa-markdown fa-4x"></i>
               <p class='description'>Markdown</p>
-
             </div>
           </div>
         </div>
@@ -218,11 +220,10 @@
   </section>
 
   <section>
-
     <div class="projectsPage" id='projectsPage'>
       <h1 class='title has-text-centered'>Projects</h1>
       <div class="pageControl">
-       
+
         <div class="level is-centered">
           <div class="level-item pageNum">
             <a id='minus' class=projectPageNum>-</a>
@@ -245,87 +246,91 @@
         </div>
       </div>
 
-
-
-      <div class="tile is-ancestor projectPage" id='1'>
-        <div class="tile is-vertical">
-          <div class="tile">
-            <div class="tile is-parent is-6">
-              <div class="tile is-child box">
-                <div class="projectLogo">
-                <img src="assets/House-share-logo.png" alt="">
+      <div class="projectPage" id='1'>
+        <div class="tile is-ancestor">
+          <div class="tile is-vertical">
+            <div class="tile">
+              <div class="tile is-parent is-6">
+                <div class="tile is-child box">
+                  <div class="projectLogo">
+                    <img src="assets/House-share-logo.png" alt="">
+                  </div>
+                </div>
               </div>
+              <div class="tile is-parent is-6">
+                <div class="tile is-child box">
+                  <div class="projectInfo">
+                    <h2>=> House-Share</h2>
+                    <p>LINKS TO PROJECT</p>
+                    <p class="heading has-text-centered">Task</p>
+                    <p>Create a full stack application in one week.</p>
+                    <p>Working alone, I chose to build a Django app with a React front end and a PostgreSQL database. In
+                      the app users are able to create house groups, which existing or new housemates are then able to
+                      request access to. Once in the group expenses can then be entered along with additional
+                      information and images, and can mark expenses as paid, with this information available to all
+                      group members</p>
+                    <p class="heading has-text-centered">Technologies</p>
+                    <p>DJANGO | REACT.JS | POSTGRESQL | HTML | SCSS | BULMA | HEROKU | JWT </p>
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="tile is-parent is-6">
+            <div class="tile is-parent">
               <div class="tile is-child box">
-                <div class="projectInfo">
-                  <h2>=> House-Share</h2>
-                  <p>LINKS TO PROJECT</p>
-                  <p class="heading has-text-centered">Task</p>
-                  <p>Create a full stack application in one week.</p>
-                  <p>Working alone, I chose to build a Django app with a React front end and a PostgreSQL database. In the app users are able to create house groups, which existing or new housemates are then able to request access to. Once in the group expenses can then be entered along with additional information and images, and can mark expenses as paid, with this information available to all group members</p>
-                  <p class="heading has-text-centered">Technologies</p>
-                  <p>DJANGO | REACT.JS | POSTGRESQL | HTML | SCSS | BULMA | HEROKU | JWT  </p>
+                <img src="assets/House-Share_expense_detail_2.png" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="tile is-vertical">
+            <div class="tile is-parent">
+              <div class="tile is-child box">
+                <img src="assets/House-Share-home.png" alt="">
+              </div>
+            </div>
+            <div class="tile">
+              <div class="tile is-parent is-6">
+                <div class="tile is-child box">
+                  <img src="assets/house-share-mobile-expense_split.png" alt="">
+                </div>
+              </div>
+              <div class="tile is-parent is-6">
+                <div class="tile is-child box">
+                  <img src="assets/house-share-mobile-home.png" alt="">
                 </div>
               </div>
             </div>
           </div>
-          <div class="tile is-parent">
-            <div class="tile is-child box">
-              <img src="assets/House-Share_expense_detail_2.png" alt="">
-            </div>
-          </div>
         </div>
-        <div class="tile is-vertical">
-          <div class="tile is-parent">
+        <div class="tile is-ancestor">
+          <div class="tile is-parent is-3">
             <div class="tile is-child box">
-              <img src="assets/House-Share-home.png" alt="">
-            </div>
-          </div>
-          <div class="tile">
-            <div class="tile is-parent is-6">
-              <div class="tile is-child box">
-                <img src="assets/house-share-mobile-expense_split.png" alt="">
-              </div>
-            </div>
-            <div class="tile is-parent is-6">
-              <div class="tile is-child box">
-                <img src="assets/house-share-mobile-home.png" alt="">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="tile is-ancestor">
-            <div class="tile is-parent is-3">
-              <div class="tile is-child box">
-                <div class="projectLogo">
+              <div class="projectLogo">
                 <img src="assets/House-Share_signup.png" alt="">
               </div>
-              </div>
             </div>
-            <div class="tile is-parent is-3">
-              <div class="tile is-child box">
-                <div class="projectLogo">
+          </div>
+          <div class="tile is-parent is-3">
+            <div class="tile is-child box">
+              <div class="projectLogo">
                 <img src="assets/House-Share_user_detail.png" alt="">
               </div>
-              </div>
             </div>
-            <div class="tile is-parent is-3">
-              <div class="tile is-child box">
-                <div class="projectLogo">
+          </div>
+          <div class="tile is-parent is-3">
+            <div class="tile is-child box">
+              <div class="projectLogo">
                 <img src="assets/house-share-expense_list.png" alt="">
               </div>
-              </div>
             </div>
-            <div class="tile is-parent is-3">
-              <div class="tile is-child box">
-                <div class="projectLogo">
+          </div>
+          <div class="tile is-parent is-3">
+            <div class="tile is-child box">
+              <div class="projectLogo">
                 <img src="assets/house-share-grouped_expense.png" alt="">
               </div>
-              </div>
             </div>
+          </div>
+        </div>
       </div>
 
       <div class="tile is-ancestor projectPage hidden" id='2'>
@@ -343,9 +348,12 @@
                   <p>LINKS TO PROJECT</p>
                   <p class="heading has-text-centered">Task</p>
                   <p>Create a full stack application in one week</p>
-                  <p>Working in a group of three we created a React app which allowed users to find, store and comment on differant books. The app uses a MongoDB database and an Express.js back end. The app also allows users to create and host private chat rooms</p>
+                  <p>Working in a group of three we created a React app which allowed users to find, store and comment
+                    on differant books. The app uses a MongoDB database and an Express.js back end. The app also allows
+                    users to create and host private chat rooms</p>
                   <p class="heading has-text-centered">Technologies</p>
-                  <p>REACT.JS | EXPRESS.JS| MONGODB & MONGOOSE | HTML | SCSS | BULMA | HEROKU | JWT | NY TIMES API | GOOGLE BOOKS API </p> 
+                  <p>REACT.JS | EXPRESS.JS| MONGODB & MONGOOSE | HTML | SCSS | BULMA | HEROKU | JWT | NY TIMES API |
+                    GOOGLE BOOKS API </p>
                 </div>
               </div>
             </div>
@@ -393,9 +401,10 @@
                   <p>LINKS TO PROJECT</p>
                   <p class="heading has-text-centered">Task</p>
                   <p>In two days create a React app utilising a public API</p>
-                  <p>Working in a pair we created a fron end React app that used the TFL API to provide users with station information and arrival times for every train and station on the TFL network</p>
+                  <p>Working in a pair we created a fron end React app that used the TFL API to provide users with
+                    station information and arrival times for every train and station on the TFL network</p>
                   <p class="heading has-text-centered">Technologies</p>
-                  <p>REACT.JS | TFL API |  HTML | CSS | BULMA | WEBPACK | GIT & GITHUB </p> 
+                  <p>REACT.JS | TFL API | HTML | CSS | BULMA | WEBPACK | GIT & GITHUB </p>
                 </div>
               </div>
             </div>
@@ -442,9 +451,12 @@
                   <h2>=> PAC-DUDE</h2>
                   <p class="heading has-text-centered">Task</p>
                   <p>To make a game to run in the browser using 'vanilla' JS, HTML & CSS</p>
-                  <p>For this project I created a themed version of the classic PacMan game. The game has 5 levels which progressivly increase in difficulty, using a Bredth First Search algorithm to controll the 'ghosts'. The game includes additional superfoods including allowing the user to collect and shoot missliles</p>
+                  <p>For this project I created a themed version of the classic PacMan game. The game has 5 levels which
+                    progressivly increase in difficulty, using a Bredth First Search algorithm to controll the 'ghosts'.
+                    The game includes additional superfoods including allowing the user to collect and shoot missliles
+                  </p>
                   <p class="heading has-text-centered">Technologies</p>
-                  <p>JAVASCRIPT | HTML | CSS | GIT & GITHUB </p> 
+                  <p>JAVASCRIPT | HTML | CSS | GIT & GITHUB </p>
                 </div>
               </div>
             </div>
