--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
           <div class="tile is-vertical">
             <div class="tile is-parent">
               <div class="tile is-child box">
-                <img src="assets/House-Share-home.png" alt="">
+                <img src="assets/house-share-homepage.png" alt="">
               </div>
             </div>
             <div class="tile">
