--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
   </header>
 
   <nav class='navbar'>
-
-    <a href="#aboutPage">About</a>
-    <a href="#contactPage">Contact</a>
-    <a href="#skillsPage">Skills</a>
-    <a href="#projectsPage">Projects</a>
-
+    <div class="links">
+      <a href="#aboutPage">About</a>
+      <a href="#contactPage">Contact</a>
+      <a href="#skillsPage">Skills</a>
+      <a href="#projectsPage">Projects</a>
+    </div>
+    <div class="rightAlign">
+      <a href='mailto:peter.gilbert88@icloud.com'><i class="fas fa-envelope fa-2x"></i></a>
+      <a href='https://www.linkedin.com/in/p-gilbert/'><i class="fab fa-linkedin fa-2x"></i></a>
+      <a href='https://github.com/PeteG-cmd'><i class="fab fa-github fa-2x"></i></a>
+    </div>
   </nav>
 
   <section>
@@ -66,54 +71,72 @@
           <p>Below you can see my current skills and sample of my projects.
         </div>
         <div class="column is-5">
-          <div class="experienceMain">
-            <div class="experienceLogosDiv">
-              <div class='logoDiv straightRBorder' id='ga'>
-                <div class="arrowLBorder" id='ga'></div>
-                <figure class="logoContainer">
-                  <img src="assets/GA-logo-vector.png" alt="GA Logo" class="logoImage" id='ga'>
-                </figure>
-              </div>
-              <div class='logoDiv straightRBorder' id='innocent'>
-                <div class="arrowLBorder hidden" id=innocent></div>
-                <figure class="logoContainer">
-                  <img src="assets/innocent-logo-vector.png" alt="Innocnet Drinks Logo" class="logoImage" id='innocent'>
-                </figure>
-              </div>
-              <div class='logoDiv straightRBorder' id='newcastle'>
-                <div class="arrowLBorder hidden" id='newcastle'></div>
-                <figure class="logoContainer">
-                  <img src="assets/newcastle-uk-logo-vector.png" alt="Newcastle university Logo" class="logoImage"
-                    id='newcastle'>
-                </figure>
-              </div>
-            </div>
-            <div class="jobDescriptionDiv">
-              <article class="about ga" id='ga'>
-                <p> General Assembly, London.</p>
-                <p>Software Engineering Immersive</p>
-                <p>Feb 2020 - May 2020</p>
-              </article>
-              <article class="about innocent hidden" id='innocent'>
-                <p>Innocent Drinks, London.</p>
-                <p>Industry Manager</p>
-                <p>July 2016 - Jan 2020</p>
-              </article>
-              <article class="about newcastle hidden" id='newcastle'>
-                <p>Newcastle University.</p>
-                <p>Human Geography (BA)</p>
-                <p>2009 - 2011</p>
-              </article>
-            </div>
+          hello
+        </div>
+      </div>
+
+      <div class="experienceMain">
+        <div class="experienceLogosDiv">
+          <div class='logoDiv straightRBorder' id='ga'>
+            <div class="arrowLBorder" id='ga'></div>
+            <figure class="logoContainer">
+              <img src="assets/GA-logo-vector.png" alt="GA Logo" class="logoImage" id='ga'>
+            </figure>
+          </div>
+          <div class='logoDiv straightRBorder' id='innocent'>
+            <div class="arrowLBorder hidden" id=innocent></div>
+            <figure class="logoContainer">
+              <img src="assets/innocent-logo-vector.png" alt="Innocnet Drinks Logo" class="logoImage" id='innocent'>
+            </figure>
+          </div>
+          <div class='logoDiv straightRBorder' id='ifco'>
+            <div class="arrowLBorder hidden" id='ifco'></div>
+            <figure class="logoContainer">
+              <img src="assets/ifco-logo.svg" alt="Ifco Logo" class="logoImage" id='ifco'>
+            </figure>
+          </div>
+          <div class='logoDiv straightRBorder' id='newcastle'>
+            <div class="arrowLBorder hidden" id='newcastle'></div>
+            <figure class="logoContainer">
+              <img src="assets/newcastle-uk-logo-vector.png" alt="Newcastle university Logo" class="logoImage"
+                id='newcastle'>
+            </figure>
           </div>
         </div>
       </div>
+    
+      <div class="jobDescriptionDiv">
+        <article class="about ga" id='ga'>
+          <p class="dates">February 2020 - May 2020</p>
+          <p class="company">General Assembly</p>
+          <p class="position">Software Engineering Immersive <span> | London</span></p>
+        </article>
+        <article class="about innocent hidden" id='innocent'>
+          <p class="dates">July 2016 - January 2020</p>
+          <p class="company">Innocent Drinks</p>
+          <p class="position">Industry Manager <span> | London</span></p>
+        </article>
+        <article class="about ifco hidden" id='ifco'>
+          <p class="dates">August 2011 - July 2016, High Wycombe</p>
+          <p class="company">IFCO Systems</p>
+          <p class="position">Head of Operations <span> | 2014 - July 2016</span></p>
+          <p class="position">Logistics Manager <span> | September 2012 - January 2014</span></p>
+          <p class="position"> Customer Service and Logistics Coordinator <span> | September 2011 - September 2012</span></p>
+        </article>
+        <article class="about newcastle hidden" id='newcastle'>
+          <p class="dates">2009 - 2011, Newcastle-Upon-Tyne</p>
+          <p class="company">Newcastle University</p>
+          <p class="position">Human Geography, Geo-Politics, Economics and Social Science <span> | (Bachelor of Arts)</span></p>
+        </article>
+      </div>
+    </div>
+
   </section>
 
   <section>
     <div class="contactPage" id='contactPage'>
       <div class="columns has-text-centered">
-        <div class="column is-5-desktop">
+        <!-- <div class="column is-5-desktop">
           <h1 class='title'>Contact</h1>
           <div class="contact">
             <a class='contactIcon' href='mailto:peter.gilbert88@icloud.com'>
@@ -129,8 +152,8 @@
               <p class='contactText'>github.com/PeteG-cmd</p>
             </a>
           </div>
-        </div>
-        <div class="column is-7-desktop">
+        </div> -->
+        <div class="column is-8-desktop is-offset-2">
           <h1 class='title' id='skillsPage'>Skills</h1>
           <div class="icons">
             <div class="icon">
