--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
   <link rel="stylesheet"
     href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Andika&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
   <script src="app.js"></script>
   <title>Peter Gilbert - Portfolio</title>
@@ -18,6 +18,28 @@
   <header>
 
   </header>
+
+ 
+
+  <section>
+    <div class="namePage">
+
+      <div class="columns growHeight">
+        <div class="column growHeight has-text-centered">
+          <!-- <figure class="profileImageContainer">
+            <img class='profileImage' src="assets/Peter-2616-122.jpeg" alt="Profile Picture">
+          </figure> -->
+          <div class="nameBox">
+            <p class="name">Peter Gilbert</p>
+            <p class="devPosition">Junior Full-Stack Developer</p>
+          </div>
+          <!-- </div> -->
+          <!-- <div class="column centered"> -->
+
+        </div>
+      </div>
+    </div>
+  </section>
 
   <nav class='navbar'>
     <div class="links">
@@ -32,26 +54,6 @@
       <a href='https://github.com/PeteG-cmd'><i class="fab fa-github fa-2x"></i></a>
     </div>
   </nav>
-
-  <section>
-    <div class="namePage">
-
-      <div class="columns growHeight">
-        <div class="column has-text-centered">
-          <figure class="profileImageContainer">
-            <img class='profileImage' src="assets/Peter-2616-122.jpeg" alt="Profile Picture">
-          </figure>
-          <div class="nameBox">
-            <p class="title">Peter Gilbert</p>
-            <p class="subtitle">Junior Full-Stack Developer</p>
-          </div>
-          <!-- </div> -->
-          <!-- <div class="column centered"> -->
-
-        </div>
-      </div>
-    </div>
-  </section>
 
   <section>
     <div class="aboutPage" id='aboutPage'>
@@ -71,11 +73,11 @@
           <p>Below you can see my current skills and sample of my projects.
         </div>
         <div class="column is-5">
-          hello
+
         </div>
       </div>
 
-      <div class="experienceMain">
+      <div class="experienceMain pad">
         <div class="experienceLogosDiv">
           <div class='logoDiv straightRBorder' id='ga'>
             <div class="arrowLBorder" id='ga'></div>
@@ -105,7 +107,7 @@
         </div>
       </div>
     
-      <div class="jobDescriptionDiv">
+      <div class="jobDescriptionDiv pad">
         <article class="about ga" id='ga'>
           <p class="dates">February 2020 - May 2020</p>
           <p class="company">General Assembly</p>
@@ -136,23 +138,7 @@
   <section>
     <div class="contactPage" id='contactPage'>
       <div class="columns has-text-centered">
-        <!-- <div class="column is-5-desktop">
-          <h1 class='title'>Contact</h1>
-          <div class="contact">
-            <a class='contactIcon' href='mailto:peter.gilbert88@icloud.com'>
-              <i class="fas fa-envelope fa-5x"></i>
-              <p class='contactText'>peter.gilbert88@icloud.com</p>
-            </a>
-            <a class='contactIcon' href='https://www.linkedin.com/in/p-gilbert/'>
-              <i class="fab fa-linkedin fa-5x "></i>
-              <p class='contactText'>linkedin.com/in/p-gilbert/</p>
-            </a>
-            <a class='contactIcon' href='https://github.com/PeteG-cmd'>
-              <i class="fab fa-github fa-5x"></i>
-              <p class='contactText'>github.com/PeteG-cmd</p>
-            </a>
-          </div>
-        </div> -->
+     
         <div class="column is-8-desktop is-offset-2">
           <h1 class='title' id='skillsPage'>Skills</h1>
           <div class="icons">
@@ -269,7 +255,7 @@
         </div>
       </div>
 
-      <div class="projectPage" id='1'>
+      <div class="projectPage pad" id='1'>
         <div class="tile is-ancestor">
           <div class="tile is-vertical">
             <div class="tile">
@@ -356,7 +342,7 @@
         </div>
       </div>
 
-      <div class="tile is-ancestor projectPage hidden" id='2'>
+      <div class="tile is-ancestor projectPage pad hidden" id='2'>
         <div class="tile is-vertical">
           <div class="tile">
             <div class="tile is-parent is-6">
@@ -409,7 +395,7 @@
         </div>
       </div>
 
-      <div class="tile is-ancestor projectPage hidden" id='3'>
+      <div class="tile is-ancestor projectPage pad hidden" id='3'>
         <div class="tile is-vertical">
           <div class="tile">
             <div class="tile is-parent is-6">
@@ -460,7 +446,7 @@
         </div>
       </div>
 
-      <div class="tile is-ancestor projectPage hidden" id='4'>
+      <div class="tile is-ancestor projectPage pad hidden" id='4'>
         <div class="tile is-vertical">
           <div class="tile">
             <div class="tile is-parent is-6">
